[package]
name = "cxx-async"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-recursion = "0.3"
cxx = "1"
delegate = "0.6"
paste = "1"

[dependencies.futures]
version = "0.3"
features = ["thread-pool"]

[build-dependencies]
cxx-build = "1"
